fixed card white spacing

--- a/_sass/_facets.scss
+++ b/_sass/_facets.scss
@@ -279,6 +279,7 @@ footer {
 
 .card-title {
   font-size: 1.2rem;
+  white-space: normal;
 }
 
 p.card-text {
